--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
-    "angular-modal-service": "~0.6.6"
+    "angular-modal-service": "~0.6.6",
+    "angular-bootstrap": "~0.12.1",
+    "angular-i18n": "^1.3.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
