--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-ui-router": "~0.2.13",
     "angular-modal-service": "~0.6.6",
     "angular-bootstrap": "~0.12.1",
-    "angular-i18n": "^1.3.15"
+    "angular-i18n": "^1.3.15",
+    "angular-base64": "~2.0.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
