--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
     "angular-modal-service": "~0.6.6",
     "angular-bootstrap": "~0.12.1",
     "angular-i18n": "^1.3.15",
-    "angular-base64": "~2.0.4"
+    "angular-base64": "~2.0.4",
+    "spin": "~1.1.6",
+    "angular-spinner": "~0.6.1",
+    "angular-sweetalert": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
