--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "promo-platform",
   "version": "0.0.0",
   "dependencies": {
+    "ng-file-upload-shim": "~4.2.0",
     "angular": "^1.3.0",
+    "ng-file-upload": "~4.2.0",
     "bootstrap": "^3.2.0",
     "angular-aria": "^1.3.0",
     "angular-cookies": "^1.3.0",
@@ -18,7 +20,8 @@
     "angular-base64": "~2.0.4",
     "spin": "~1.1.6",
     "angular-spinner": "~0.6.1",
-    "angular-sweetalert": "~1.1.0"
+    "angular-sweetalert": "~1.1.0",
+    "angularjs-dropdown-multiselect": "~1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
