--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "spin": "~1.1.6",
     "angular-spinner": "~0.6.1",
     "angular-sweetalert": "~1.1.0",
-    "angularjs-dropdown-multiselect": "~1.5.2"
+    "angularjs-dropdown-multiselect": "~1.5.2",
+    "angular-chart.js": "~0.7.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
